Promises & Error Handling

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>webpack starterkit</title>
 </head>
+
 <body>
   <h1>webpack starter</h1>
   <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
-</body>
+    <h1> JavaScript Fundamentals </h1>
+    <p id="first" class="p1">First paragraph</p>
+    <p name="n1" class="p1">Second paragraph</p>
+    <p class="p3">Third paragraph</p>
+</body> 
+
 </html>
