--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,21 @@
 </head>
 
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+    <h1>webpack starter</h1>
+    <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
     <h1> JavaScript Fundamentals </h1>
     <p id="first" class="p1">First paragraph</p>
     <p name="n1" class="p1">Second paragraph</p>
     <p class="p3">Third paragraph</p>
+    <form action="/path" method="post" id="user-form">
+        <input name="user" placeholder="username"/>
+        <span id="user-error"></span>
+        <br />
+        <input name="avatar-file" placeholder="Avatar File"/>
+        <span id="avatar-error"></span>
+        <br />
+        <button type="submit">Submit</button>
+    </form>
 </body> 
 
 </html>
